--- a/pages/all-employees.html
+++ b/pages/all-employees.html
@@ -652,40 +652,14 @@
                     </table>
                     <div class="bottom__pagination--container">
                         <div class="page__number">
-                            <span>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="24" height="24" rx="12" fill="white"/>
-                                    <g clip-path="url(#clip0_5621_4946)">
-                                    <path d="M13.4668 8L9.4668 12L13.4668 16L14.4068 15.06L11.3535 12L14.4068 8.94L13.4668 8Z"
-                                          fill="#757575"/>
-                                    </g>
-                                    <defs>
-                                    <clipPath id="clip0_5621_4946">
-                                    <rect width="16" height="16" fill="white" transform="translate(4 4)"/>
-                                    </clipPath>
-                                    </defs>
-                                </svg>
-                            </span>
-                            <span class="page__fill">01</span>
-                            <span>02</span>
-                            <span>03</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#757575" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left"><polyline points="15 18 9 12 15 6"></polyline></svg>
+                            <span class="page__count page__fill">01</span>
+                            <span class="page__count">02</span>
+                            <span class="page__count">03</span>
                             <span>...</span>
-                            <span>24</span>
+                            <span class="page__count">24</span>
                             <span>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="24" height="24" rx="12" fill="white"/>
-                                    <g clip-path="url(#clip0_5621_4960)">
-                                    <path d="M10.6666 8L9.72656 8.94L12.7799 12L9.72656 15.06L10.6666 16L14.6666 12L10.6666 8Z"
-                                          fill="#757575"/>
-                                    </g>
-                                    <defs>
-                                    <clipPath id="clip0_5621_4960">
-                                    <rect width="16" height="16" fill="white" transform="translate(4 4)"/>
-                                    </clipPath>
-                                    </defs>
-                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#757575" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
                             </span>
                         </div>
                         <div class="row__number">
@@ -1080,40 +1054,14 @@
                     </table>
                     <div class="bottom__pagination--container">
                         <div class="page__number">
-                            <span>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="24" height="24" rx="12" fill="white"/>
-                                    <g clip-path="url(#clip0_5621_4946)">
-                                    <path d="M13.4668 8L9.4668 12L13.4668 16L14.4068 15.06L11.3535 12L14.4068 8.94L13.4668 8Z"
-                                          fill="#757575"/>
-                                    </g>
-                                    <defs>
-                                    <clipPath id="clip0_5621_4946">
-                                    <rect width="16" height="16" fill="white" transform="translate(4 4)"/>
-                                    </clipPath>
-                                    </defs>
-                                </svg>
-                            </span>
-                            <span class="page__fill">01</span>
-                            <span>02</span>
-                            <span>03</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#757575" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left"><polyline points="15 18 9 12 15 6"></polyline></svg>
+                            <span class="page__count page__fill">01</span>
+                            <span class="page__count">02</span>
+                            <span class="page__count">03</span>
                             <span>...</span>
-                            <span>24</span>
+                            <span class="page__count">24</span>
                             <span>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="24" height="24" rx="12" fill="white"/>
-                                    <g clip-path="url(#clip0_5621_4960)">
-                                    <path d="M10.6666 8L9.72656 8.94L12.7799 12L9.72656 15.06L10.6666 16L14.6666 12L10.6666 8Z"
-                                          fill="#757575"/>
-                                    </g>
-                                    <defs>
-                                    <clipPath id="clip0_5621_4960">
-                                    <rect width="16" height="16" fill="white" transform="translate(4 4)"/>
-                                    </clipPath>
-                                    </defs>
-                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#757575" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
                             </span>
                         </div>
                         <div class="row__number">
@@ -1496,40 +1444,14 @@
                     </table>
                     <div class="bottom__pagination--container">
                         <div class="page__number">
-                            <span>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="24" height="24" rx="12" fill="white"/>
-                                    <g clip-path="url(#clip0_5621_4946)">
-                                    <path d="M13.4668 8L9.4668 12L13.4668 16L14.4068 15.06L11.3535 12L14.4068 8.94L13.4668 8Z"
-                                          fill="#757575"/>
-                                    </g>
-                                    <defs>
-                                    <clipPath id="clip0_5621_4946">
-                                    <rect width="16" height="16" fill="white" transform="translate(4 4)"/>
-                                    </clipPath>
-                                    </defs>
-                                </svg>
-                            </span>
-                            <span class="page__fill">01</span>
-                            <span>02</span>
-                            <span>03</span>
+                            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#757575" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-left"><polyline points="15 18 9 12 15 6"></polyline></svg>
+                            <span class="page__count page__fill">01</span>
+                            <span class="page__count">02</span>
+                            <span class="page__count">03</span>
                             <span>...</span>
-                            <span>24</span>
+                            <span class="page__count">24</span>
                             <span>
-                                <svg width="24" height="24" viewBox="0 0 24 24" fill="none"
-                                     xmlns="http://www.w3.org/2000/svg">
-                                    <rect width="24" height="24" rx="12" fill="white"/>
-                                    <g clip-path="url(#clip0_5621_4960)">
-                                    <path d="M10.6666 8L9.72656 8.94L12.7799 12L9.72656 15.06L10.6666 16L14.6666 12L10.6666 8Z"
-                                          fill="#757575"/>
-                                    </g>
-                                    <defs>
-                                    <clipPath id="clip0_5621_4960">
-                                    <rect width="16" height="16" fill="white" transform="translate(4 4)"/>
-                                    </clipPath>
-                                    </defs>
-                                </svg>
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#757575" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-chevron-right"><polyline points="9 18 15 12 9 6"></polyline></svg>
                             </span>
                         </div>
                         <div class="row__number">
