--- a/pages/all-employees.html
+++ b/pages/all-employees.html
@@ -1480,20 +1480,15 @@
                     <div class="write__note--container">
                         <h3>Write a note</h3>
                         <div class="each__detail--input">
-                            <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                            <input class='textarea' name='UserId' placeholder="Uniform"/>
                             <br>
                             <label for='userId' class='label'>Subject</label>
-                            <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                            </svg>
                         </div>
                         <div class="each__detail--input">
-                            <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
-                            <br>
-                            <label for='userId' class='label'>Tags</label>
-                            <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                            </svg>
+                            <select class="textarea">
+                                <option value="0" selected disabled>Uniform</option>
+                            </select>
+                            <label for='userId' class='select__label'>Tags</label>
                         </div>
                         <div class="text__area-note">
                             <textarea name="message" id="message" cols="30" rows="10" placeholder="Message"></textarea>
