--- a/pages/employee-details.html
+++ b/pages/employee-details.html
@@ -184,15 +184,15 @@
                     </div>
                     <div class="col-lg-5">
                         <div class="row align-items-center justify-content-end m-0">
-                            <div class="col-lg-4 col-md-4 col-4 ps-0">
+                            <div class="col-lg-5 col-md-5 col-5 ps-0">
                                 <button class="btn__jobs">
-                                    <i class="fa fa-comment-o" aria-hidden="true"></i>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
                                     Send SMS
                                 </button>
                             </div>
-                            <div class="col-lg-4 col-md-4 col-4 ps-0">
+                            <div class="col-lg-5 col-md-5 col-5 ps-0">
                                 <button class="btn__jobs">
-                                    <i class="fa fa-pencil" aria-hidden="true"></i>
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#ffffff" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-edit-2"><path d="M17 3a2.828 2.828 0 1 1 4 4L7.5 20.5 2 22l1.5-5.5L17 3z"></path></svg>
                                     Add Note
                                 </button>
                             </div>
@@ -228,10 +228,10 @@
                                     <div class="employee__profile--img">
                                         <img class="img-fluid" src="../resources/images/employee.png" alt="employee-image">
                                         <div class="upload__employee--img">
-                                            <div>
+                                            <button>
                                                 <i class="fa fa-file-image-o" aria-hidden="true"></i>
                                                 <span>Change Picture</span>
-                                            </div>
+                                            </button>
                                             <label class="alert__img">
                                                 <i class="fa fa-exclamation-circle" aria-hidden="true"></i>
                                                 <span>Image size Limit should be 125kb Max.</span>
@@ -332,7 +332,9 @@
                                                 </div>
                                             </td>
                                             <td>100 <span>%</span></td>
-                                            <td>View results</td>
+                                            <td>
+                                                <a class="action__link" href="#">View results</a>
+                                            </td>
                                         </tr>
                                         <tr>
                                             <td>Safety in the workplace</td>
@@ -342,7 +344,9 @@
                                                 </div>
                                             </td>
                                             <td>60 <span>%</span></td>
-                                            <td>Remove</td>
+                                            <td>
+                                                <a href="#" class="action__link">Remove</a>
+                                            </td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -375,7 +379,9 @@
                                                 </div>
                                             </td>
                                             <td>123 kb</td>
-                                            <td>Remove</td>
+                                            <td>
+                                                <a href="#" class="action__link">Remove</a>
+                                            </td>
                                         </tr>
                                         <tr>
                                             <td>RSA Quiz Information</td>
@@ -385,7 +391,9 @@
                                                 </div>
                                             </td>
                                             <td>123 kb</td>
-                                            <td>Remove</td>
+                                            <td>
+                                                <a href="#" class="action__link">Remove</a>
+                                            </td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -412,12 +420,16 @@
                                         <tr class="border__tr">
                                             <td>Contract</td>
                                             <td>max 2020</td>
-                                            <td>Remove</td>
+                                            <td>
+                                                <a href="#" class="action__link">Remove</a>
+                                            </td>
                                         </tr>
                                         <tr>
                                             <td>Compliance document</td>
                                             <td>max 2020</td>
-                                            <td>Remove</td>
+                                            <td>
+                                                <a href="#" class="action__link">Remove</a>
+                                            </td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -444,12 +456,16 @@
                                         <tr class="border__tr">
                                             <td>Resume</td>
                                             <td>max 2020</td>
-                                            <td>Remove</td>
+                                            <td>
+                                                <a href="#" class="action__link">Remove</a>
+                                            </td>
                                         </tr>
                                         <tr>
                                             <td>Master of Business</td>
                                             <td>max 2020</td>
-                                            <td>Remove</td>
+                                            <td>
+                                                <a href="#" class="action__link">Remove</a>
+                                            </td>
                                         </tr>
                                         </tbody>
                                     </table>
@@ -627,17 +643,15 @@
                     <div class="write__note--container">
                         <h3>Upload HR Document</h3>
                         <div class="each__detail--input">
-                            <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
+                            <input class='textarea' name='UserId' placeholder="Uniform"/>
                             <br>
                             <label for='userId' class='label'>Name</label>
                         </div>
                         <div class="each__detail--input">
-                            <input class='textarea' name='UserId' placeholder="Lorem ipsum dolor sit amet"/>
-                            <br>
-                            <label for='userId' class='label'>Actions</label>
-                            <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                            </svg>
+                            <select class="textarea">
+                                <option value="0" selected disabled>Require Employee Acknowledgement</option>
+                            </select>
+                            <label for='userId' class='select__label'>Actions</label>
                         </div>
                         <div class="text__area-note position-relative">
                             <div class="dropzone">
