--- a/pages/job-active.html
+++ b/pages/job-active.html
@@ -190,9 +190,6 @@
                     <table class="table table-borderless payroll__table">
                         <thead>
                         <tr>
-                            <th scope="col">
-
-                            </th>
                             <th scope="col">Name of Role</th>
                             <th scope="col">Date posted</th>
                             <th scope="col">Views</th>
@@ -204,12 +201,11 @@
                         <tbody>
                         <tr>
                             <td>
-                                <label class="checkbox__container">&nbsp;
+                                <label class="checkbox__container">Barista
                                     <input type="checkbox">
                                     <span class="checkmark"></span>
                                 </label>
                             </td>
-                            <td>Barista</td>
                             <td>14 July 2021</td>
                             <td>26</td>
                             <td>10</td>
@@ -232,12 +228,11 @@
                         </tr>
                         <tr>
                             <td>
-                                <label class="checkbox__container">&nbsp;
+                                <label class="checkbox__container">Head Chef
                                     <input type="checkbox">
                                     <span class="checkmark"></span>
                                 </label>
                             </td>
-                            <td>Head Chef</td>
                             <td>14 July 2021</td>
                             <td>79</td>
                             <td>23</td>
@@ -254,12 +249,11 @@
                         </tr>
                         <tr>
                             <td>
-                                <label class="checkbox__container">&nbsp;
+                                <label class="checkbox__container">Head of Operations
                                     <input type="checkbox">
                                     <span class="checkmark"></span>
                                 </label>
                             </td>
-                            <td>Head of Operations</td>
                             <td>14 July 2021</td>
                             <td>98</td>
                             <td>52</td>
