--- a/pages/payroll-application-3.html
+++ b/pages/payroll-application-3.html
@@ -167,36 +167,28 @@
                 </button>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Don’t use an award"/>
-                <br>
-                <label for='userId' class='label'>Award Name</label>
-                <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                </svg>
+                <select class="textarea">
+                    <option value="0" selected disabled>Don’t use an award</option>
+                </select>
+                <label for='userId' class='select__label'>Award Name</label>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Don’t us an agreement"/>
-                <br>
-                <label for='userId' class='label'>Employment Agreement</label>
-                <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                </svg>
+                <select class="textarea">
+                    <option value="0" selected disabled>Don’t use an agreement</option>
+                </select>
+                <label for='userId' class='select__label'>Employment Agreement</label>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Use time sheets to submit all time worked"/>
-                <br>
-                <label for='userId' class='label'>Time Sheets</label>
-                <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                </svg>
+                <select class="textarea">
+                    <option value="0" selected disabled>Use time sheets to submit all time worked</option>
+                </select>
+                <label for='userId' class='select__label'>Time Sheets</label>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Pickle Jobs"/>
-                <br>
-                <label for='userId' class='label'>Prime Location</label>
-                <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                </svg>
+                <select class="textarea">
+                    <option value="0" selected disabled>Pickle Jobs</option>
+                </select>
+                <label for='userId' class='select__label'>Prime Location</label>
             </div>
             <div class="each__detail--input">
                 <input class='textarea' name='UserId' placeholder=""/>
@@ -204,28 +196,22 @@
                 <label for='userId' class='label'>Sub Location</label>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Manually Set pay rates"/>
-                <br>
-                <label for='userId' class='label'>Pay Rate Template</label>
-                <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                </svg>
+                <select class="textarea">
+                    <option value="0" selected disabled>Manually Set pay rates</option>
+                </select>
+                <label for='userId' class='select__label'>Pay Rate Template</label>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Select Pay schedule"/>
-                <br>
-                <label for='userId' class='label'>Pay Schedule</label>
-                <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                </svg>
+                <select class="textarea">
+                    <option value="0" selected disabled>Select Pay schedule</option>
+                </select>
+                <label for='userId' class='select__label'>Pay Schedule</label>
             </div>
             <div class="each__detail--input">
-                <input class='textarea' name='UserId' placeholder="Payment Type per hour"/>
-                <br>
-                <label for='userId' class='label'>Payment Type</label>
-                <svg width="8" height="4" viewBox="0 0 8 4" fill="none" xmlns="http://www.w3.org/2000/svg">
-                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z" fill="#616161"/>
-                </svg>
+                <select class="textarea">
+                    <option value="0" selected disabled>Payment Type per hour</option>
+                </select>
+                <label for='userId' class='select__label'>Payment Type</label>
             </div>
             <div class="each__detail--input">
                 <input class='textarea' name='UserId' placeholder="0.0"/>
