--- a/pages/filter-dropdown-list.html
+++ b/pages/filter-dropdown-list.html
@@ -567,7 +567,7 @@
                                     </svg>
                                     <div class="invitation__recent--container">
                                         <ul>
-                                            <li>Resent invitation</li>
+                                            <li>Sync with Payroll</li>
                                             <li>Remove</li>
                                         </ul>
                                     </div>
@@ -591,16 +591,22 @@
                             <td>-</td>
                             <td>-</td>
                             <td class="d-flex">
-                                    <span class="action__btn mx-2">
-                                        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
-                                    </span>
-                                <span class="action__btn">
-                                        <svg width="24" height="24" viewBox="0 0 14 4" fill="none"
-                                             xmlns="http://www.w3.org/2000/svg">
-                                            <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
-                                                  fill="#F16532"/>
-                                        </svg>
-                                    </span>
+                                <span class="action__btn mx-2">
+                                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-message-square"><path d="M21 15a2 2 0 0 1-2 2H7l-4 4V5a2 2 0 0 1 2-2h14a2 2 0 0 1 2 2z"></path></svg>
+                                </span>
+                                <div class="action__btn recent__invitation">
+                                    <svg  width="24" height="24" viewBox="0 0 14 4" fill="none"
+                                          xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M1.99992 0.333496C1.08325 0.333496 0.333252 1.0835 0.333252 2.00016C0.333252 2.91683 1.08325 3.66683 1.99992 3.66683C2.91659 3.66683 3.66659 2.91683 3.66659 2.00016C3.66659 1.0835 2.91659 0.333496 1.99992 0.333496ZM11.9999 0.333496C11.0833 0.333496 10.3333 1.0835 10.3333 2.00016C10.3333 2.91683 11.0833 3.66683 11.9999 3.66683C12.9166 3.66683 13.6666 2.91683 13.6666 2.00016C13.6666 1.0835 12.9166 0.333496 11.9999 0.333496ZM6.99992 0.333496C6.08325 0.333496 5.33325 1.0835 5.33325 2.00016C5.33325 2.91683 6.08325 3.66683 6.99992 3.66683C7.91658 3.66683 8.66658 2.91683 8.66658 2.00016C8.66658 1.0835 7.91658 0.333496 6.99992 0.333496Z"
+                                              fill="#F16532"/>
+                                    </svg>
+                                    <div class="invitation__recent--container">
+                                        <ul>
+                                            <li>Resent invitation</li>
+                                            <li>Remove</li>
+                                        </ul>
+                                    </div>
+                                </div>
                             </td>
                         </tr>
                         <tr>
