--- a/pages/job-active.html
+++ b/pages/job-active.html
@@ -118,11 +118,11 @@
                         <span><a href="./job-active.html">Active</a></span>
                     </li>
                     <li class="dropdown__menu--item">
-                        <span><a href="#">Draft</a></span>
+                        <span><a href="./job-draft.html">Draft</a></span>
                     </li>
                     </li>
                     <li class="dropdown__menu--item">
-                        <span><a href="#">Archived</a></span>
+                        <span><a href="./job-archived.html">Archived</a></span>
                     </li>
                 </ul>
             </li>
