--- a/pages/payroll-entry-verified.html
+++ b/pages/payroll-entry-verified.html
@@ -25,6 +25,7 @@
     <script src="../resources/js/bootstrap.min.js"></script>
     <script src="../resources/js/bootstrap.bundle.min.js"></script>
     <script src="../resources/js/site.js"></script>
+    <script src="../resources/js/fiter.js"></script>
     <title>Payroll Entry Verified</title>
 </head>
 <body>
@@ -259,9 +260,15 @@
 
         <div class="payroll__search--container">
             <div class="row m-0">
-                <div class="col-lg-7 col-md-12 col-12">
+                <div class="col-lg-7 col-md-12 col-12 p-0">
                     <div class="row m-0">
-                        <div class="col-lg-12 col-md-12 col-10 p-0">
+                        <div class="col-lg-2 col-md-2 col-2 p-0">
+                            <button class="csv__download--btn">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="#F16532" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-arrow-down-circle"><circle cx="12" cy="12" r="10"></circle><polyline points="8 12 12 16 16 12"></polyline><line x1="12" y1="8" x2="12" y2="16"></line></svg>
+                                CSV
+                            </button>
+                        </div>
+                        <div class="col-lg-10 col-md-10 col-10 p-0">
                             <div class="payroll__search">
                                 <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
                                      xmlns="http://www.w3.org/2000/svg">
@@ -274,12 +281,155 @@
                     </div>
                 </div>
                 <div class="col-lg-5 col-md-12 col-12 mt-lg-0 mt-sm-4">
-                    <div class="row payroll__filter--container m-0 justify-content-end">
-                        <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <button class="btn__jobs">Jobs</button>
+                    <div class="row payroll__filter--container m-0">
+                        <div class="col-lg-4 col-md-4 col-4 ps-0 position-relative">
+                            <div class="chart__top--right job__filter--btn payroll__filter--bg" id="jobFilter">
+                                Jobs
+                                <svg width="14" height="7" viewBox="0 0 8 4" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z"
+                                          fill="#616161"/>
+                                </svg>
+                            </div>
+                            <div class="job__filter--list job__list" id="jobFilterContent" >
+                                <div class="filter__heading">
+                                    <span>Jobs</span>
+                                    <span>Clear</span>
+                                </div>
+                                <div class="payroll__search">
+                                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M8.33326 7.33326H7.8066L7.61993 7.15326C8.41993 6.21993 8.83326 4.9466 8.6066 3.59326C8.29326 1.73993 6.7466 0.259929 4.87993 0.0332621C2.05993 -0.313405 -0.313405 2.05993 0.0332621 4.87993C0.259929 6.74659 1.73993 8.29326 3.59326 8.6066C4.9466 8.83326 6.21993 8.41993 7.15326 7.61993L7.33326 7.80659V8.33326L10.1666 11.1666C10.4399 11.4399 10.8866 11.4399 11.1599 11.1666C11.4333 10.8933 11.4333 10.4466 11.1599 10.1733L8.33326 7.33326ZM4.33326 7.33326C2.67326 7.33326 1.33326 5.99326 1.33326 4.33326C1.33326 2.67326 2.67326 1.33326 4.33326 1.33326C5.99326 1.33326 7.33326 2.67326 7.33326 4.33326C7.33326 5.99326 5.99326 7.33326 4.33326 7.33326Z"
+                                              fill="#616161"/>
+                                    </svg>
+                                    <input type="text" name="search" id="job-search" placeholder="Search...">
+                                </div>
+                                <div class="filter__checkbox">
+                                    <div class="filter__group mt-2">
+                                        <label class="checkbox__container">Barista
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter__group">
+                                        <label class="checkbox__container">Barista
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter__group">
+                                        <label class="checkbox__container">Floor Manager
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter__group">
+                                        <label class="checkbox__container">Bar
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter__group">
+                                        <label class="checkbox__container">Waiter
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
-                        <div class="col-lg-4 col-md-4 col-4 ps-0">
-                            <button class="btn__sync">Sync Type</button>
+                        <div class="col-lg-4 col-md-4 col-4 ps-0 position-relative">
+                            <div class="chart__top--right venues__filter--btn payroll__filter--bg" id="venusFilter">
+                                Venues
+                                <svg width="14" height="7" viewBox="0 0 8 4" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z"
+                                          fill="#616161"/>
+                                </svg>
+                            </div>
+                            <div class="job__filter--list venus__list" id="venusFilterContent">
+                                <div class="filter__heading">
+                                    <span>Venues</span>
+                                    <span>Clear</span>
+                                </div>
+                                <div class="payroll__search">
+                                    <svg width="12" height="12" viewBox="0 0 12 12" fill="none"
+                                         xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M8.33326 7.33326H7.8066L7.61993 7.15326C8.41993 6.21993 8.83326 4.9466 8.6066 3.59326C8.29326 1.73993 6.7466 0.259929 4.87993 0.0332621C2.05993 -0.313405 -0.313405 2.05993 0.0332621 4.87993C0.259929 6.74659 1.73993 8.29326 3.59326 8.6066C4.9466 8.83326 6.21993 8.41993 7.15326 7.61993L7.33326 7.80659V8.33326L10.1666 11.1666C10.4399 11.4399 10.8866 11.4399 11.1599 11.1666C11.4333 10.8933 11.4333 10.4466 11.1599 10.1733L8.33326 7.33326ZM4.33326 7.33326C2.67326 7.33326 1.33326 5.99326 1.33326 4.33326C1.33326 2.67326 2.67326 1.33326 4.33326 1.33326C5.99326 1.33326 7.33326 2.67326 7.33326 4.33326C7.33326 5.99326 5.99326 7.33326 4.33326 7.33326Z"
+                                              fill="#616161"/>
+                                    </svg>
+                                    <input type="text" name="search" id="venues-search" placeholder="Search...">
+                                </div>
+                                <div class="filter__checkbox">
+                                    <div class="filter__group mt-2">
+                                        <label class="checkbox__container">Select All
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="c-border mt-2 mb-2"></div>
+                                    <div class="filter__group">
+                                        <label class="checkbox__container">Barista
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter__group">
+                                        <label class="checkbox__container">Floor Manager
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter__group">
+                                        <label class="checkbox__container">Bar
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter__group">
+                                        <label class="checkbox__container">Waiter
+                                            <input type="checkbox">
+                                            <span class="checkmark"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-4 col-4 ps-0 p-sm-0 position-relative">
+                            <div class="chart__top--right sync__filter--btn position-relative svg__fill" id="syncFilter">
+                                Sync Type
+                                <svg width="14" height="7" viewBox="0 0 8 4" fill="none"
+                                     xmlns="http://www.w3.org/2000/svg">
+                                    <path d="M0.666504 0.666504L3.99984 3.99984L7.33317 0.666504H0.666504Z"
+                                          fill="#616161"/>
+                                </svg>
+                            </div>
+                            <div class="job__filter--list sync__list" id="syncFilterContent">
+                                <div class="filter__heading">
+                                    <span>Sync</span>
+                                    <span>Clear</span>
+                                </div>
+                                <div class="filter__checkbox">
+                                    <div class="filter__group mt-2">
+                                        <label class="radio-container">KeyPay Sync
+                                            <input type="radio" name="sync">
+                                            <span class="radio-checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter__group">
+                                        <label class="radio-container">Xero Sync
+                                            <input type="radio" name="sync">
+                                            <span class="radio-checkmark"></span>
+                                        </label>
+                                    </div>
+                                    <div class="filter__group">
+                                        <label class="radio-container">Deputy Sync
+                                            <input type="radio" name="sync">
+                                            <span class="radio-checkmark"></span>
+                                        </label>
+                                    </div>
+                                </div>
+                            </div>
                         </div>
                     </div>
                 </div>
